--- a/src/components/CurrentWeather/MainData.module.css
+++ b/src/components/CurrentWeather/MainData.module.css
@@ -1,6 +1,5 @@
 .MainCard{
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  background-color: white;
   border: 1px solid black;
 }
 
@@ -38,4 +37,5 @@
 .Temp span{
   font-weight: lighter;
   font-size: 18px;
+  vertical-align: top;
 }
