--- a/src/components/CurrentWeather/MainData.module.css
+++ b/src/components/CurrentWeather/MainData.module.css
@@ -1,22 +1,23 @@
 .MainCard{
-  background-color: white;
-  border: 1px solid black;
+
 }
 
 .LocationTemp{
-  border: 1px solid black;
+  text-align: left;
+  background-color: white;
   width: 90%;
   margin: 0 auto;
 }
 
 .LocationTemp p{
   margin: 2px;
-  text-align: left;
+  color: #878787;
 }
 
 .LocationTemp p:nth-of-type(1){
   font-size: 22px;
-  font-weight:600;
+  font-weight: lighter;
+  font-family: 'Roboto', arial;
 }
 
 .Temp{
@@ -27,11 +28,12 @@
 
 .Temp img{
   width: 110px;
+  margin-left: 10px;
 }
 
 .Temp h1{
   font-size: 50px;
-  margin-left: 15px;
+  /* margin-left: 15px; */
 }
 
 .Temp span{
