--- a/src/components/SideWeather/SideWeather.module.css
+++ b/src/components/SideWeather/SideWeather.module.css
@@ -6,14 +6,30 @@
 .List ul{
     list-style: none;
     text-align: left;
+    padding-left: 0;
 }
 
 .List ul li{
-  padding: 13px 0;
-  font-size: 20px;
-  /* font-family: sans-serif; */
+  padding: 2px 0;
+  font-size: 15px;
+  font-family: sans-serif;
+  color: #878787;
+  font-weight: lighter;
 }
 
 .List li span{
   font-weight: lighter;
+}
+
+.List button{
+  width: 90px;
+  border: 1px solid #878787;
+  padding: 4.5px;
+  font-size: 12px;;
+}
+
+@media (min-width:555px) {
+  .Link button{
+    display: inline;
+  }
 }
