--- a/src/components/SideWeather/SideWeather.module.css
+++ b/src/components/SideWeather/SideWeather.module.css
@@ -1,6 +1,8 @@
 .List{
   width: 90%;
   margin: 10px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .List ul{
