--- a/src/components/CurrentWeather/MainData.module.css
+++ b/src/components/CurrentWeather/MainData.module.css
@@ -3,10 +3,13 @@
 }
 
 .LocationTemp{
-  text-align: left;
   background-color: white;
   width: 90%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .LocationTemp p{
@@ -32,7 +35,7 @@
 }
 
 .Temp h1{
-  font-size: 50px;
+  font-size: 60px;
   font-weight: lighter;
 }
 
