--- a/src/components/SideWeather/SideWeather.module.css
+++ b/src/components/SideWeather/SideWeather.module.css
@@ -1,6 +1,6 @@
 .List{
   width: 90%;
-  margin: 10px auto;
+  margin: 0px auto;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
@@ -8,12 +8,16 @@
 .List ul{
     list-style: none;
     text-align: left;
+    margin-top: 50px;
     padding-left: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
 }
 
 .List ul li{
   padding: 2px 0;
-  font-size: 15px;
+  font-size: 20px;
   font-family: sans-serif;
   color: #878787;
   font-weight: lighter;
@@ -32,7 +36,5 @@
 }
 
 @media (min-width:555px) {
-  .Link button{
-    display: inline;
-  }
+
 }
