--- a/src/containers/Weather/Weather.module.css
+++ b/src/containers/Weather/Weather.module.css
@@ -1,8 +1,9 @@
 .ContainerCurrent{
   width: 90%;
-  margin: 30px auto 0 auto;
+  margin: 80px auto 0 auto;
   background: white;
   border-radius: 5px 5px 0 0;
+  padding: 10px;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
@@ -10,6 +11,7 @@
 .ContainerForecast{
   width: 90%;
   margin: 0 auto;
+  padding: 10px;
   background: white;
   border-radius: 0px 0px 5px 5px;
   display: grid;
@@ -17,10 +19,15 @@
 }
 
 
+
 @media (min-width:765px ) {
   .ContainerCurrent,
   .ContainerForecast{
     max-width: 600px;
+  }
+
+  .ContainerForecast{
+      grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
   }
 }
 
