--- a/src/components/CurrentWeather/MainData.module.css
+++ b/src/components/CurrentWeather/MainData.module.css
@@ -1,5 +1,5 @@
 .MainCard{
-  
+
 }
 
 .LocationTemp{
@@ -18,7 +18,12 @@
 }
 
 .LocationTemp p:nth-of-type(1){
-  font-size: 22px;
+  font-size: 28px;
+  font-weight: lighter;
+  font-family: 'Roboto', arial;
+}
+.LocationTemp p:nth-of-type(2){
+  font-size: 20px;
   font-weight: lighter;
   font-family: 'Roboto', arial;
 }
