--- a/src/components/SideWeather/SideWeather.module.css
+++ b/src/components/SideWeather/SideWeather.module.css
@@ -1,23 +1,19 @@
 .List{
   width: 90%;
   margin: 0px auto;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
 
 .List ul{
     list-style: none;
     text-align: left;
-    margin-top: 50px;
+    margin-top: 50px auto;
     padding-left: 0;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
+
 }
 
 .List ul li{
-  padding: 2px 0;
-  font-size: 20px;
+  padding: 2px 20px;
+  font-size: 18px;
   font-family: sans-serif;
   color: #878787;
   font-weight: lighter;
@@ -35,6 +31,11 @@
   cursor: pointer;
 }
 
-@media (min-width:555px) {
-
+@media (min-width:765px) {
+  .List ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+  }
 }
